# DynamicDynamiteCitySim

./: .gitignore  README.md  pyproject.toml  todo.md
mintabemenet/: Lakosok.csv  Szolgáltatások.csv  Épületek.csv
res/: house.blend
res/models/: backdrop.blend  backdrop.mtl  house.blend  house.mtl  intersection.blend  intersection.mtl  street.blend  street.mtl
res/sampleInput/: FoglalkozásTípusok.csv  Lakosok.csv  SzolgáltatásTípusok.csv  Szolgáltatások.csv  VárosfejlesztésiProjektTípusok.csv  VárosfejlesztésiProjektek.csv  ÉpületTípusok.csv  Épületek.csv
res/styles/: darkStyle.qss
res/styles/dark/: darkStyle.qss
shaders/: fragmentShader.glsl  horizonFragmentShader.glsl  horizonVertexShader.glsl  instanceVertexShader.glsl  loadingBarFragmentShader.glsl  loadingBarVertexShader.glsl  vertexShader.glsl
src/: app.py  building.py  camera.py  city.py  cityGenerator.py  disaster.py  disasters.py  exporter.py  horizon.py  importer.py  inputHandler.py  intersection.py  loadingScreen.py  main.py  material.py  mesh.py  obj.py  pathHandler.py  project.py  read_lakosok_csv.py  read_épületek_csv.py  recalchappiness.py  recalculator.py  resident.py  scene.py  service.py  shader.py  street.py  texture.py  ui.py  utilities.py  window.py
