[tool.poetry]
package-mode = false

[project]
name = "DynamicDynamiteCitySim"
requires-python = ">=3.13"
dependencies = [
    "moderngl (>=5.12.0,<6.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pyglm (>=2.8.0,<3.0.0)",
    "pyqt6 (>=6.8.1,<7.0.0)",
    "keyboard (>=0.13.5,<0.14.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
