[project]
name = "DynamicDynamiteCitySim"
version = "0.0.1"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "moderngl (>=5.12.0,<6.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pillow (>=12.1.1)",
    "pyglm (>=2.8.0,<3.0.0)",
    "pyqt6 (>=6.8.1,<7.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pynput (>=1.8.1,<2.0.0)",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = false
